--- a/src/Homepage/Sections/Banner/Banner.css
+++ b/src/Homepage/Sections/Banner/Banner.css
@@ -42,6 +42,20 @@
     }
 }
 
+@keyframes fade-in {
+
+    from {scale: 0.8; opacity: 0;}
+    to {scale: 1; opacity: 1;}
+    
+  }
+  
+  @keyframes fade-out {
+  
+    from {opacity: 1; scale:1}
+    to {opacity: 1 ; scale: 0.4}
+    
+  }
+
 @media (width<600px) {
     .headingban{
 
