--- a/src/Homepage/Sections/Main1/Main1.css
+++ b/src/Homepage/Sections/Main1/Main1.css
@@ -15,3 +15,17 @@
     background-size: cover;
     padding-bottom: 40px;
 }
+
+@keyframes fade-in {
+
+    from {scale: 0.8; opacity: 0;}
+    to {scale: 1; opacity: 1;}
+    
+  }
+  
+  @keyframes fade-out {
+  
+    from {opacity: 1; scale:1}
+    to {opacity: 1 ; scale: 0.4}
+    
+  }
