higher res background

--- a/src/Homepage/Sections/Main1/Main1.css
+++ b/src/Homepage/Sections/Main1/Main1.css
@@ -10,7 +10,7 @@
 }
 
 .main1parent {
-    background-image: url("../../../images/stars.webp");
+    background-image: url("../../../images/bg2.jpg");
     margin: 0;
     background-size: cover;
     padding-bottom: 40px;
